[package]
name = "taskbar-number"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Shell",
] }
